# ScpTensor

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BPCA_QUICK_REFERENCE.md  BPCA_UPDATE_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCUMENTATION_TEST_REPORT.md  LICENSE  OLD_PARAMS_REMOVAL_SUMMARY.md  README.md  README.zh-CN.md  SIMPLIFIED_TEST_SUMMARY.md  benchmark_example.py  coverage.json  gen_one_page_cn.js  mkdocs.yml  pyproject.toml  run_qc_norm_comparison.py  test_psm_qc.sh  test_refactor.py  verify_load.py  杨宏伟.pptx
.github/workflows/: README.md  cd.yml  ci.yml  dependency-review.yml  docs-ci.yml  nightly-benchmark.yml
.serena/: project.yml
_build/: .buildinfo  DOCSTRING_ISSUES.html  ISSUES_AND_LIMITATIONS.html  PHASE1_COMPLETION.html  README.html  SETUP_SUMMARY.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
_build/.doctrees/: DOCSTRING_ISSUES.doctree  ISSUES_AND_LIMITATIONS.doctree  PHASE1_COMPLETION.doctree  README.doctree  SETUP_SUMMARY.doctree  index.doctree  quickstart.doctree
_build/_modules/: index.html
_build/_sources/: DOCSTRING_ISSUES.md.txt  PHASE1_COMPLETION.md.txt  SETUP_SUMMARY.md.txt  index.rst.txt  quickstart.rst.txt
_build/api/: benchmark.html  cluster.html  core.html  diff_expr.html  dim_reduction.html  feature_selection.html  impute.html  index.html  integration.html  normalization.html  qc.html  referee.html  standardization.html  utils.html  viz.html
_build/design/: API_REFERENCE.html  ARCHITECTURE.html  INDEX.html  MASTER.html  MIGRATION.html  ROADMAP.html
benchmark/: README.md  __init__.py  benchmark_data_generator.py  benchmark_local_import.py
benchmark/aggregation/: README.md  __init__.py  metrics.py  plots.py  run_benchmark.py
benchmark/autoselect/: README.md  run_normalization_literature_score.py  run_strategy_comparison.py  run_synthetic_normalization_stress.py
benchmark/imputation/: README.md  __init__.py  metrics.py  plots.py  run_benchmark.py
benchmark/integration/: README.md  compare_marker_methods_with_scanpy.py  metrics.py  plots.py  run_benchmark.py  run_real_dia_batch_confounding.py
benchmark/normalization/: README.md  __init__.py  metrics.py  plots.py  run_benchmark.py
benchmark_results/: scanpy_comparison_report.md
competitor_benchmark_results/: competitor_benchmark_results.json
docs/: .gitignore  API_QUICK_REFERENCE.md  API_REFERENCE_GUIDE.md  COMPETITOR_BENCHMARK.md  COMPLETION_STATUS.md  DATASETS.md  DEVELOPER_GUIDE.md  DOCUMENTATION_GUIDELINES.md  ISSUES_AND_LIMITATIONS.md  MIGRATION_GUIDE.md  Makefile  PERFORMANCE_REPORT.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  SCPTENSOR_API_AUDIT.md  SCPTENSOR_CODING_STANDARDS.md  aggregation_contract.md  aggregation_literature.md  aggregation_methods_from_literature.md  api.md  autoselect_contract.md  autoselect_tutorial.ipynb  benchmark_data_generator.py  build.sh  compatibility_policy.md  conf.py  core_compute_contract.md  core_data_contract.md  dia_sc_aggregation_benchmark_design_review_20260312.md  dia_sc_batch_confounding_benchmark_design_review_20260312.md  dia_sc_batch_correction_literature_review_20260305.md  dia_sc_batch_diagnostics_metrics_review_20260312.md  dia_sc_imputation_literature_review_20260304.md  dia_sc_io_state_mapping_contract_review_20260312.md  dia_sc_log_transform_scale_contract_review_20260312.md  dia_sc_masked_value_benchmark_design_review_20260312.md  dia_sc_missingness_semantics_review_20260312.md  dia_sc_normalization_literature_review_20260307.md  dia_sc_state_aware_completeness_metrics_review_20260312.md  (+37 more)
docs/api/: benchmark.rst  cluster.rst  core.rst  diff_expr.rst  dim_reduction.rst  feature_selection.rst  impute.rst  index.rst  integration.rst  normalization.rst  qc.rst  referee.rst  standardization.rst  utils.rst  viz.rst
docs/article/: README.md  benchmarking_informatics_workflows_for_data-independent_acquisition_single-cell_proteomics_unusable_20260329.md  dia_single_cell_processed_matrix_download_list_20260329.md
docs/benchmarks/: BENCHMARK_SUMMARY.txt  COMPREHENSIVE_BENCHMARK_REPORT.md  accuracy_report.md  scanpy_comparison_report.md
docs/plans/: INDEX.md  (+17 more)
examples/: BUG_REPORT.md  README.md  example_autoselect.py  mvp_analysis.py  test_pipeline_comprehensive.py  test_pipeline_comprehensive_README.md  test_qc_bug_hunting.py  test_qc_report.py  test_qc_stress.py
scptensor/: __init__.py
scripts/: README.md  build_docs.sh  doc_loader.py  performance_benchmark.py  run_competitor_benchmark.py  serve_docs.sh  update_test_api_names.py  verify_sparse_optimizations.py
slides/: one_page_summary.html
studies/: DELIVERY_SUMMARY.md  METRICS_MODULE.md  METRICS_SUMMARY.md  PLOTTING_MODULE_SUMMARY.md  PLOTTING_QUICK_START.md  QUICK_REFERENCE.md  QUICK_START_RUNNER.md  README.md  RUNNER_IMPLEMENTATION_REPORT.md  START_HERE.md  __init__.py  comparison_engine.py  metrics.py  run_comparison.py  test_visualization.py  verify_runner_update.py  verify_setup.py
tests/: benchmark_jit.py  benchmark_jit_integration.py  benchmark_jit_speedup.py  benchmark_log_jit.py  benchmark_sparse_operations.py  conftest.py  repro_umap.py  test_benchmark.py  test_cluster.py  test_competitor_benchmark.py  test_diff_expr.py  test_error_handling.py  test_feature_selection.py  test_filtering.py  test_impute.py  test_impute_viz.py  test_integration.py  test_io_container_methods.py  test_io_exceptions.py  test_io_export.py  test_io_import.py  test_io_integration.py  test_io_serializers.py  test_matrix_ops_sparse.py  test_normalization.py  test_qc.py  test_sparse_row_operation.py  test_sparse_row_operation_benchmark.py  test_sparse_utils.py  test_studies_integration.py  test_types.py  test_umap_edge_sampling.py  test_umap_fix.py  test_umap_scaling.py  test_umap_spectral.py  test_utils_batch.py  test_utils_data_generator.py  test_utils_stats.py  test_utils_transform.py  test_viz.py  (+3 more)
tmp/: imputation_correctness_checklist.md  imputation_gap_plan_checklist.md  integration_batch_improvement_plan_20260304.md
tutorial/: README.md  autoselect_tutorial.ipynb  tutorial.ipynb
(+661 files in other folders)
