[project]
name = "scptensor"
version = "0.1.0"
description = "Single-cell proteomics (SCP) data analysis framework with comprehensive tools for quality control, normalization, imputation, batch correction, and dimensionality reduction."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9",
    "numba>=0.60",
    "numpy>=1.26",
    "pandas>=2.0",
    "plotly>=5.20",
    "polars>=1.0",
    "pyarrow>=14.0",
    "psutil>=6.0",
    "scienceplots>=2.0",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "seaborn>=0.13",
    "umap-learn>=0.5.6",
    "h5py>=3.15.1",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["scptensor*"]
exclude = ["data*", "studies*", "tests*"]

[project.optional-dependencies]
# Core optional dependencies for extended functionality
io = [
    "anndata>=0.10",
]

# Integration methods (batch correction)
integration = [
    "harmonypy>=0.1",
    "scanorama>=1.7",
]

# Benchmarking against other tools
benchmark = [
    "scanpy>=1.10",
]

# All optional features
all = [
    "scptensor[io,integration,benchmark]",
]

# Development dependencies
dev = [
    "ipykernel>=7.1",
    "mypy>=1.9",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

# Documentation dependencies
docs = [
    "sphinx>=7.0",
    "furo>=2024.0",
    "sphinx-autodoc-typehints>=2.0",
    "myst-parser>=3.0",
]

[dependency-groups]
# Development tools (mirrors [project.optional-dependencies.dev])
dev = [
    "ipykernel>=7.1.0",
    "mypy>=1.15.0",
    "pre-commit>=4.0.0",
    "pytest>=9.0.1",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.10",
]

# Documentation tools (mirrors [project.optional-dependencies.docs])
docs = [
    "sphinx>=8.0.0",
    "furo>=2024.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "myst-parser>=4.0.0",
]

# Optional runtime dependencies
integration = [
    "harmonypy>=0.1",
    "scanorama>=1.7",
]

benchmark = [
    "scanpy>=1.11.5",
]

io = [
    "anndata>=0.10",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=scptensor",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["scptensor"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length handled by formatter
    "SIM108", # use ternary operator (can reduce readability)
]

[tool.ruff.lint.isort]
known-first-party = ["scptensor"]

# ============================================================================
# Ruff Per-File Ignores
# ============================================================================
# These exceptions follow the ScpTensor Coding Standards defined in
# docs/SCPTENSOR_CODING_STANDARDS.md
[tool.ruff.lint.per-file-ignores]
# Tests: Allow relaxed naming (N), security checks (S), and module level imports (E402)
"tests/**/*.py" = ["N", "S", "E402"]
# Tests that use dynamic imports for backwards compatibility
"tests/test_normalization.py" = ["E402"]

# Core structures: X and M are standard names for data/mask matrices in
# scientific computing (consistent with NumPy, SciPy, pandas, scanpy)
# N802: Function name 'X' should be lowercase (property name)
# N803: Argument name 'M' should be lowercase
# N806: Variable 'new_X' in function should be lowercase
"scptensor/core/structures.py" = ["N802", "N803", "N806"]
# QC variability: X and X_detected are standard names for data matrices
"scptensor/qc/variability.py" = ["N803", "N806"]
# QC advanced viz: M is standard name for mask matrices
"scptensor/viz/recipes/qc_advanced.py" = ["N803", "N806", "F841"]
# Imputation methods: X, M, W, U, Vt are standard matrix names in linear algebra
"scptensor/impute/_utils.py" = ["N803", "N806"]
"scptensor/impute/bpca.py" = ["N803", "N806"]
"scptensor/impute/knn.py" = ["N803", "N806"]
"scptensor/impute/lls.py" = ["N803", "N806"]
"scptensor/impute/minprob.py" = ["N803", "N806"]
"scptensor/impute/missforest.py" = ["N803", "N806"]
"scptensor/impute/nmf.py" = ["N803", "N806"]
"scptensor/impute/ppca.py" = ["N803", "N806"]
"scptensor/impute/qrilc.py" = ["N803", "N806"]
"scptensor/impute/svd.py" = ["N803", "N806", "B007"]
# Imputation viz: X, M are standard matrix names, list default is acceptable
"scptensor/viz/recipes/impute.py" = ["N803", "N806", "B006"]
# Tutorial notebooks: E402 for dynamic imports, C408 for dict literal style, N/F for relaxed naming
"docs/tutorials/**/*.ipynb" = ["E402", "E712", "C408", "N", "F811"]

# Documentation notebooks in docs/notebooks/: Allow relaxed naming and module level imports
"docs/notebooks/**/*.ipynb" = ["N", "E402", "F811"]

# Benchmark files: X and M are standard names for data/mask matrices in scientific computing
"scptensor/benchmark/*.py" = ["N803", "N806"]
# Cluster: X and M_cluster are standard variable names in clustering algorithms
"scptensor/cluster/*.py" = ["N806", "N803"]
# Core I/O and sparse utils: X, M, X_dense, M_dense, X_data, M_data are standard matrix names
"scptensor/core/io.py" = ["N803", "N806", "B904", "N816"]
"scptensor/core/sparse_utils.py" = ["N803", "N806", "F821"]
# Core JIT ops: X, Y, M are standard mathematical notation in JIT operations
"scptensor/core/jit_ops.py" = ["N803", "N806", "SIM116"]
# Core matrix ops: M, M_coo are standard matrix names
"scptensor/core/matrix_ops.py" = ["N803", "N806"]
# Core utils: X, U, S are standard mathematical notation
"scptensor/core/utils.py" = ["N803", "N806", "B904"]
# Feature selection: X, M are standard matrix names
"scptensor/feature_selection/*.py" = ["N803", "N806"]
# Differential expression: X, M are standard matrix names
"scptensor/diff_expr/*.py" = ["N803", "N806", "F841", "B007", "SIM102"]
# Dimension reduction: X, U, Vt, Xv are standard mathematical notation
"scptensor/dim_reduction/*.py" = ["N803", "N806"]
# Integration: X, Z, B_hat, etc. are standard mathematical notation
"scptensor/integration/*.py" = ["N803", "N806"]
# Normalization: X, M are standard matrix names
"scptensor/normalization/*.py" = ["N803", "N806", "SIM118"]
# QC modules: X, M are standard matrix names
"scptensor/qc/*.py" = ["N803", "N806", "SIM118", "F841"]
# Visualization: X, M are standard matrix names
"scptensor/viz/*.py" = ["N803", "N806", "SIM105", "B007", "F841"]
"scptensor/viz/base/*.py" = ["N803", "N806"]
# Standardization: TYPE_CHECKING imports may be flagged as unused
"scptensor/standardization/__init__.py" = ["F401"]
# Utils modules: X, M, etc. are standard matrix names
"scptensor/utils/*.py" = ["N803", "N806", "N801", "F841"]
# Scripts: Allow relaxed rules for utility scripts
"scripts/*.py" = ["N803", "N806", "E402", "F841", "SIM102", "B017"]
# Tests: Allow blind exception assertion for error testing
"tests/core/test_assay.py" = ["B017"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
follow_imports = "normal"
explicit_package_bases = true
exclude = [
    'scptensor/datasets/external/',
    '.*_external\\.py$',
    'studies/',
]

[[tool.mypy.overrides]]
module = "scptensor.utils.stats"
warn_return_any = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "scptensor.utils.transform"
warn_return_any = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "scptensor.utils.batch"
warn_return_any = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "scptensor.core.sparse_utils"
warn_return_any = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "scptensor.benchmark.*"
warn_return_any = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "scptensor.viz.recipes.*"
warn_return_any = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "scptensor.feature_selection.*"
warn_return_any = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "scptensor.core.jit_ops"
warn_return_any = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "scptensor.core.utils"
warn_return_any = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "scptensor.viz.recipes.report"
warn_return_any = false
check_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scptensor.viz.base.*"
warn_return_any = false
check_untyped_defs = false
